grammar/.antlr/EZgraphParser.java
// Generated from d:\Documents\UNAL\Semestre 7\Lenguajes de Programacion\Proyecto\Repo\EZgraph\grammar\EZgraph.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EZgraphParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, COMMENT=16, 
		LINE_COMMENT=17, EASTEREGG=18, WS=19, DOUBLE=20, INT=21, STRING=22, BOOLEANO=23, 
		FUNCIONCPARAM=24, FUNCIONUNPARAM=25, FUNCIONDOPARAM=26, ADDEDGE=27, DELETEEDGE=28, 
		TIPOGRAFO=29, ID=30;
	public static final int
		RULE_s = 0, RULE_exp = 1, RULE_e = 2, RULE_creacion = 3, RULE_declaracion = 4, 
		RULE_leer = 5, RULE_imprimir = 6, RULE_value = 7, RULE_funciondeclaracion = 8, 
		RULE_funcion = 9, RULE_pintar = 10, RULE_ciclo = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"s", "exp", "e", "creacion", "declaracion", "leer", "imprimir", "value", 
			"funciondeclaracion", "funcion", "pintar", "ciclo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "';'", "'='", "'read'", "'('", "')'", "'print'", 
			"'.'", "','", "'paint'", "'for'", "':'", "'{'", "'}'", null, null, null, 
			null, null, null, null, null, null, null, null, "'addEdge'", "'deleteEdge'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "COMMENT", "LINE_COMMENT", "EASTEREGG", "WS", 
			"DOUBLE", "INT", "STRING", "BOOLEANO", "FUNCIONCPARAM", "FUNCIONUNPARAM", 
			"FUNCIONDOPARAM", "ADDEDGE", "DELETEEDGE", "TIPOGRAFO", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "EZgraph.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EZgraphParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			exp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public EContext e() {
			return getRuleContext(EContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
	}

	public final ExpContext exp() throws RecognitionException {
		ExpContext _localctx = new ExpContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exp);
		try {
			setState(30);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
			case T__7:
			case T__11:
			case TIPOGRAFO:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(26);
				e();
				setState(27);
				exp();
				}
				break;
			case EOF:
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public CreacionContext creacion() {
			return getRuleContext(CreacionContext.class,0);
		}
		public LeerContext leer() {
			return getRuleContext(LeerContext.class,0);
		}
		public ImprimirContext imprimir() {
			return getRuleContext(ImprimirContext.class,0);
		}
		public CicloContext ciclo() {
			return getRuleContext(CicloContext.class,0);
		}
		public PintarContext pintar() {
			return getRuleContext(PintarContext.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public EContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_e; }
	}

	public final EContext e() throws RecognitionException {
		EContext _localctx = new EContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_e);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(32);
				declaracion();
				}
				break;
			case 2:
				{
				setState(33);
				creacion();
				}
				break;
			case 3:
				{
				setState(34);
				leer();
				}
				break;
			case 4:
				{
				setState(35);
				imprimir();
				}
				break;
			case 5:
				{
				setState(36);
				ciclo();
				}
				break;
			case 6:
				{
				setState(37);
				pintar();
				}
				break;
			case 7:
				{
				setState(38);
				funcion();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreacionContext extends ParserRuleContext {
		public TerminalNode TIPOGRAFO() { return getToken(EZgraphParser.TIPOGRAFO, 0); }
		public TerminalNode ID() { return getToken(EZgraphParser.ID, 0); }
		public TerminalNode INT() { return getToken(EZgraphParser.INT, 0); }
		public CreacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_creacion; }
	}

	public final CreacionContext creacion() throws RecognitionException {
		CreacionContext _localctx = new CreacionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_creacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(TIPOGRAFO);
			setState(42);
			match(ID);
			setState(43);
			match(T__0);
			setState(44);
			match(INT);
			setState(45);
			match(T__1);
			setState(46);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(EZgraphParser.ID, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaracion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(ID);
			setState(49);
			match(T__3);
			setState(50);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LeerContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(EZgraphParser.ID, 0); }
		public LeerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leer; }
	}

	public final LeerContext leer() throws RecognitionException {
		LeerContext _localctx = new LeerContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_leer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(T__4);
			setState(53);
			match(T__5);
			setState(54);
			match(ID);
			setState(55);
			match(T__6);
			setState(56);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImprimirContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ImprimirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imprimir; }
	}

	public final ImprimirContext imprimir() throws RecognitionException {
		ImprimirContext _localctx = new ImprimirContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_imprimir);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__7);
			setState(59);
			match(T__5);
			setState(60);
			value();
			setState(61);
			match(T__6);
			setState(62);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public FunciondeclaracionContext funciondeclaracion() {
			return getRuleContext(FunciondeclaracionContext.class,0);
		}
		public TerminalNode STRING() { return getToken(EZgraphParser.STRING, 0); }
		public TerminalNode INT() { return getToken(EZgraphParser.INT, 0); }
		public TerminalNode DOUBLE() { return getToken(EZgraphParser.DOUBLE, 0); }
		public TerminalNode BOOLEANO() { return getToken(EZgraphParser.BOOLEANO, 0); }
		public TerminalNode ID() { return getToken(EZgraphParser.ID, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_value);
		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				funciondeclaracion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				match(STRING);
				setState(66);
				match(T__2);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(67);
				match(INT);
				setState(68);
				match(T__2);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				match(DOUBLE);
				setState(70);
				match(T__2);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(71);
				match(BOOLEANO);
				setState(72);
				match(T__2);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(73);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunciondeclaracionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(EZgraphParser.ID, 0); }
		public TerminalNode FUNCIONCPARAM() { return getToken(EZgraphParser.FUNCIONCPARAM, 0); }
		public TerminalNode FUNCIONUNPARAM() { return getToken(EZgraphParser.FUNCIONUNPARAM, 0); }
		public List<TerminalNode> INT() { return getTokens(EZgraphParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(EZgraphParser.INT, i);
		}
		public TerminalNode FUNCIONDOPARAM() { return getToken(EZgraphParser.FUNCIONDOPARAM, 0); }
		public FunciondeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funciondeclaracion; }
	}

	public final FunciondeclaracionContext funciondeclaracion() throws RecognitionException {
		FunciondeclaracionContext _localctx = new FunciondeclaracionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_funciondeclaracion);
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				match(ID);
				setState(77);
				match(T__8);
				setState(78);
				match(FUNCIONCPARAM);
				setState(79);
				match(T__5);
				setState(80);
				match(T__6);
				setState(81);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				match(ID);
				setState(83);
				match(T__8);
				setState(84);
				match(FUNCIONUNPARAM);
				setState(85);
				match(T__5);
				setState(86);
				match(INT);
				setState(87);
				match(T__6);
				setState(88);
				match(T__2);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				match(ID);
				setState(90);
				match(T__8);
				setState(91);
				match(FUNCIONDOPARAM);
				setState(92);
				match(T__5);
				setState(93);
				match(INT);
				setState(94);
				match(T__9);
				setState(95);
				match(INT);
				setState(96);
				match(T__6);
				setState(97);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(EZgraphParser.ID, 0); }
		public TerminalNode ADDEDGE() { return getToken(EZgraphParser.ADDEDGE, 0); }
		public List<TerminalNode> INT() { return getTokens(EZgraphParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(EZgraphParser.INT, i);
		}
		public TerminalNode DELETEEDGE() { return getToken(EZgraphParser.DELETEEDGE, 0); }
		public FuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcion; }
	}

	public final FuncionContext funcion() throws RecognitionException {
		FuncionContext _localctx = new FuncionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_funcion);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				match(ID);
				setState(101);
				match(T__8);
				setState(102);
				match(ADDEDGE);
				setState(103);
				match(T__5);
				setState(104);
				match(INT);
				setState(105);
				match(T__9);
				setState(106);
				match(INT);
				setState(107);
				match(T__6);
				setState(108);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				match(ID);
				setState(110);
				match(T__8);
				setState(111);
				match(ADDEDGE);
				setState(112);
				match(T__5);
				setState(113);
				match(INT);
				setState(114);
				match(T__9);
				setState(115);
				match(INT);
				setState(116);
				match(T__9);
				setState(117);
				match(INT);
				setState(118);
				match(T__6);
				setState(119);
				match(T__2);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				match(ID);
				setState(121);
				match(T__8);
				setState(122);
				match(DELETEEDGE);
				setState(123);
				match(T__5);
				setState(124);
				match(INT);
				setState(125);
				match(T__9);
				setState(126);
				match(INT);
				setState(127);
				match(T__6);
				setState(128);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PintarContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(EZgraphParser.ID, 0); }
		public PintarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pintar; }
	}

	public final PintarContext pintar() throws RecognitionException {
		PintarContext _localctx = new PintarContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_pintar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(ID);
			setState(132);
			match(T__8);
			setState(133);
			match(T__10);
			setState(134);
			match(T__5);
			setState(135);
			match(T__6);
			setState(136);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CicloContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(EZgraphParser.ID, 0); }
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public CicloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ciclo; }
	}

	public final CicloContext ciclo() throws RecognitionException {
		CicloContext _localctx = new CicloContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_ciclo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(T__11);
			setState(139);
			match(ID);
			setState(140);
			match(T__3);
			setState(141);
			value();
			setState(142);
			match(T__12);
			setState(143);
			value();
			setState(144);
			match(T__13);
			setState(145);
			exp();
			setState(146);
			match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}